# myWork_template

./: README.md  data1.csv  data2.csv
src/: CMakeLists.txt  ceres_extensions.h  curveFitting.cpp  main.cpp  objectBA.cpp  objectBAmv.cpp  testAuto.cpp
